assets/css/style.css
/* Background colour for body of page and font style*/

body {
    background-color: #ffffff;
    font-family: "Montserrat Alternates", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: #401c04;
}

/* internal link colors */
#postures-link, #roots a, #journey a {
    color: #401c04;
}

/* Header all pages */
header {
    position: fixed;
    padding: 0 20px;
    z-index: 99;
    width: 100%;
    height: fit-content;
    display: flex;
    justify-content: space-between;
    background-color: #de8e8a;
    top: 0;
}

header h1 {
    font-family: "Montserrat Alternates", sans-serif;
    font-weight: 700;
    font-style: normal;
    font-size: 300%;
  
}

header a {
    color: inherit;
    text-decoration: none;
}


/* Navigation menu all pages */

nav {
    position: fixed;
    background-color: #de8e8a;
    width: 100%;
    height: fit-content;
    right: 20px;
    padding: 5px 20px;
    display:none;
    top: 100%;
}

nav a {
    color: inherit;
    text-decoration: none;
}

#navigation-toggle {
    display: none;
}

#menu {
    list-style-type: none;
    font-size: 110%;
    letter-spacing: 4px;
}

.active {
    border-bottom: 1px solid #401c04;
}

/* So Hum Website meaning styling */

#definition {
    position: fixed;
    text-transform: lowercase;
    margin-top: 70px;
    padding: 5px 10px;
    display: flex;
    align-items: baseline;
    justify-content: space-between;
    flex-direction: row;
}

/* Home Page */

/* PARALLAX*/

.welcome-photo-parallax {
    /*main image*/
    background: url(../images/Main_background_image.jpg) no-repeat center center/cover;

    /*specific height*/
    min-height: 800px;
    min-width: 100%;

    /* parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.roots-parallax {
    /*main image*/
    background: url(../images/lotus-flower.jpg) no-repeat center center/cover;

    /*specific height*/
    min-height: 800px;
    width: 100%;

    /* parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

}

.benefits-parallax {
    /*main image*/
    background: url(../images/Main_monk_hands.jpg) no-repeat center center/cover;

    /*specific height*/
    min-height: 800px;
    width: 100%;

    /* parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
      
}

.journey-parallax {
    /*main image*/
    background: url(../images/path.jpg) no-repeat center center/cover;

    /*specific height*/
    min-height: 800px;
    width: 100%;

    /* parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* HOME PAGE Content */

#quote-home {
    background-color: rgba(255, 255, 255, 0.8);
    text-align: center;
    position: absolute;
    bottom: 60%;
    top: 40%;
    width: 100%;
    min-height: 150px;
    padding: 50px 0;
}

#quote-home > h4 {
    font-size: 130%;
}

#quote-home > p {
    font-size: 110%;
    /*line-height: 15px;*/
    text-wrap: wrap;
    padding: 0 50px;
}

#benefits-text, #roots-text, #journey-text {
    background-color: rgba(255, 255, 255, 0.8);
    width: 100%;
    padding: 50px 0;
    top: 50%;
    bottom:50%;
    text-align: center;
}

#benefits-text > ul {
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-direction: column;
    line-height: 30px;
}

#roots > p, #journey-text > p {
    line-height: 25px;
}

#benefits h3, #roots h3, #journey-text h3 {
    font-size: 200%;
    text-align: center;
}

/* TECHNIQUES PAGE */ 

.getting-started  {
        /*main image*/
        background: url(../images/getting-started.jpg) no-repeat center center/cover;

        /*specific height*/
        min-height: 800px;
        width: 100%;
    
        /* parallax scrolling effect */
        background-attachment: fixed;
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
}

#getting-started-text {
    text-align: center;
    padding: 20px 0;
    margin-top: 120px;
    background-color: rgba(255, 255, 255, 0.7);
}

#getting-started-text > h4 {
    font-size: 150%;
}

/* List of techniques section */

.flex-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    padding: 20px 0;
}

.techniques {
    width: 100%;
    padding: 20px 20px;
}

.techniques h4 {
    font-size: 150%;
    text-align: center;
}
.techniques h5, .techniques h6 {
    font-size: 120%;
}

#text-box {
    width: 40%;
    text-wrap: wrap;
    border: 2px solid #401c04;
    border-radius: 25px 25px;
}

#techniques-option {
   text-align: center;
   padding: 10px 0;
}

#techniques-image {
    position: relative;
    width: 90vw;
    height: 90vw;
    /* Makes image circular*/
    max-width: 300px;
    max-height: 300px;
    border-radius: 55%;
    padding: 10px 0px;
}


/* FOOTER ALL PAGES */

footer {
    background-color: #de8e8a;
    color: #401c04;
    text-align: center;
    padding: 15px 0;
    width: 100%;
    position: inherit;
    top: 97%;
    bottom: 0;
}

#socialmedia {
    display: flex;
    justify-content: space-evenly;
    padding: 20px 0;
    list-style-type: none;
}

#socialmedia i {
    font-size: 140%;
    color: #401c04;
    padding: 15%;

}

/* Media query: large or landscape phones (576px and up) */

@media screen and (min-width: 576px) { 

}


/* Media query: tablets and larger (768px and up) */

@media screen and (min-width: 768px) {
    
            /* Header */
            nav {
                display: block;
                position: relative;
                box-shadow: none;
                width: fit-content;
                padding-right: 1rem;
            }
    
            #menu {
                display: flex;
            }
    
            #menu>li {
                padding-left: 1rem;
            }
            .navigation-label {
                display: none;
            }
    
        }

/* Large devices (laptops and desktops, 992px and up) */

@media screen and (min-width:992px) {

}

/* X-Large devices (1200px and up)*/
@media screen and (min-width: 1200px) {


}

